--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -229,7 +229,7 @@ a.current {
   position: relative;
   padding: 1.5rem;
   text-decoration: none;
-  transition: all var(--motion); }
+  transition: box-shadow var(--motion); }
 
 .card:hover {
   box-shadow: 0px 25px 50px -12px rgba(0, 0, 0, 0.25); }
@@ -244,7 +244,7 @@ a.current {
   height: 100%;
   object-fit: cover;
   opacity: 0.25;
-  transition: all var(--motion); }
+  transition: transform var(--motion), opacity var(--motion); }
   .card img.light {
     display: none; }
 
@@ -313,7 +313,7 @@ a.current {
   margin: -1px -1.5rem 0;
   position: relative;
   text-decoration: none;
-  transition: all var(--motion); }
+  transition: background var(--motion), border var(--motion), box-shadow var(--motion); }
 
 .item:hover {
   background-color: var(--color-bg-hover);
